tests/assets/test_suites/w3c_wsdl20/documents/bad/Description-2B/Description.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/Description-2B/Description.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="example.org/Description"
	xmlns:name="http://example.org/name"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema"
	xmlns:othertns="http://example.org/Description2">

	<wsdl:documentation>
		This test shows an invalid target namespace
		specified on the desciption element. The
		target namespace must be an absolute IRI.
		
		This document violates assertion Description-1006.
	</wsdl:documentation>
</wsdl:description>
